# new_admin_panel_sprint_2

./: README.md
docker_compose/simple_project/: dev.yml  docker-compose.yml
docker_compose/simple_project/app/: gunicorn.conf.py  setup.cfg
docker_compose/simple_project/app/api/v1/movies/: views.py
docker_compose/simple_project/app/api/v1/movies/tests/: test_movies.py
docker_compose/simple_project/app/example/: settings.py
docker_compose/simple_project/app/movies/: admin.py
docker_compose/simple_project/app/movies/migrations/: 0001_initial.py  0002_alter_personfilmwork_role.py  0003_alter_filmwork_table_alter_genre_table_and_more.py  0003_create_superuser.py
docker_compose/simple_project/app/requirements/: base.txt
docker_compose/simple_project/docker/dev/app/: Dockerfile
docker_compose/simple_project/docker/dev/app/entrypoints/: entrypoint.sh
docker_compose/simple_project/docker/dev/db/: pg.conf
docker_compose/simple_project/docker/dev/env/: .env
docker_compose/simple_project/docker/dev/nginx/conf.d/: default.conf  proxy.conf
docker_compose/simple_project/docker/dev/reserv/v1/: Dockerfile
docker_compose/simple_project/docker/dev/reserv/v2/: Dockerfile
docker_compose/simple_project/docker/dev/uwsgi/: run_uwsgi.sh
docker_compose/simple_project/docker/dev/uwsgi/conf/: uwsgi.ini
docker_compose/simple_project/docker/prod/app/: Dockerfile
docker_compose/simple_project/docker/prod/env/: .db.env  .env
docker_compose/simple_project/docker/prod/nginx/conf.d/: default.conf
