[metadata]
name = new_admin_panel_sprint_2
description = Django template in docker with docker-compose
author = Sergey Kimaikin
url = https://github.com/BloodFan/new_admin_panel_sprint_2

[options]
packages = find:
include_package_data = True
python_requires = >=3.12
zip_safe = False
install_requires = file: requirements/base.txt

[options.extras_require]
dev = file: requirements/dev.txt